webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: ns1
  labels:
    app: webapp
spec:
 replicas: 1
 selector:
  matchLabels:
     app: webapp        
 template:
    metadata:
     name: webapp
     labels:
       app: webapp
    spec:
      containers:
      - name: webapp
        image: nginx:1.14.2
        ports:
        - containerPort: 80
