webapp1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1-deployment
  namespace: ns1
  labels:
    app: webapp1
spec:
 replicas: 1
 selector:
  matchLabels:
     app: webapp1
 template:
    metadata:
     name: webapp1
     labels:
       app: webapp1
    spec:
      containers:
      - name: webapp1
        image: polinux/stress
        command: ["stress"]
        args: ["--cpu", "0.1", "--vm", "1", "--vm-bytes", "128M"]
        # stress --cpu 1 --vm 2 --vm-bytes 128M


  # resources:
        #   requests:
        #     cpu: 100m
        #     memory: "100Mi"
        #   limits:
        #     cpu: 200m
        #     memory: "200Mi"
# apiVersion: v1
# kind: Service
# metadata:
#   name: webapp1
#   namespace: ns1
# spec:
#   selector:
#     app: webapp1
#   ports:
#     - port: 80
#       targetPort: 80
