webapp1-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webapp1-statefulset
  namespace: rezapoc1
  labels:
    app: webapp1
spec:
 replicas: 1
 selector:
  matchLabels:
     app: webapp1
 serviceName: "webapp1"   
 template:
    metadata:
     name: webapp1
     labels:
       app: webapp1
    spec:
      volumes:
      - name: myvol
        persistentVolumeClaim:
          claimName: pvc-rezapoc1
      containers:
      - name: webapp1
        image: amaas-eos-drm2.cec.lab.emc.com:5074/polinux/stress
        command: ["stress"]
        args: ["--cpu", "1", "--vm", "1", "--vm-bytes", "500M", "--vm-keep"]
        volumeMounts:
          - mountPath: "/etc/data"
            name: myvol
