external-name-webapp1.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp1
  namespace: ns2
spec:
  type: ExternalName
  externalName: webapp1.ns1
