external-name-webapp2.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp2
  namespace: ns1
spec:
  type: ExternalName
  externalName: webapp2.ns2
