hellosvc1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-svc1v1
  namespace: ns1
  labels:
    app: helloworld-svc1v1
spec:
 replicas: 1
 selector:
  matchLabels:
     app: helloworld-svc1
     version: v1
 template:
    metadata:
     name: helloworld-svc1
     labels:
       app: helloworld-svc1
       version: v1
    spec:
      containers:
      - name: helloworld-svc1v1
        image: rezabah/svc1v1:v1
        ports:
        - containerPort: 80
          name: http-web
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc1
  namespace: ns1
  labels:
    app: helloworld-svc1
spec:
  selector:
    app: helloworld-svc1
  ports:
    - port: 80
      appProtocol: http
      targetPort: 80
