webapp-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: webappsvclb
spec:
  type: LoadBalancer
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
