webapp-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: webappsvcnode
  namespace: ns1
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30003
