webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webappsvc
  namespace: ns3
spec:
  selector:
    app: webapp
  ports:
    - name: http
      targetPort: http
      protocol: TCP
      port: 80
