webapp2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2-deployment
  namespace: ns2
  labels:
    app: webapp2
spec:
 replicas: 1
 selector:
  matchLabels:
     app: webapp2
     version: v1
 template:
    metadata:
     name: webapp2
     labels:
       app: webapp2
       version: v1
    spec:
      containers:
      - name: webapp2
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2
  namespace: ns2
spec:
  selector:
    app: webapp2
  ports:
    - port: 8080
      appProtocol: http
      targetPort: 8080
