service-entry-webapp2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se-webapp2
  namespace: ns1
spec:
  hosts:
  - webapp2
  location: MESH_INTERNAL
  resolution: STATIC
  endpoints:
  - address: 2.2.2.2
