webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: ns1
spec:
  ingressClassName: nginx-example
  rules:
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: "/" 
        backend:
          service:
            name: webappsvc
            port:
              number: 80
