webapp1-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp1-vs
  namespace: ns1
spec:
  hosts:
  - webapp1
  exportTo:
  - "*"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: webapp1.ns1
