webapp2-vs-original.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp2-vs
  namespace: ns2
spec:
  hosts:
  - webapp2
  exportTo:
  - "*"
  http:
  - route:
    - destination:
        host: webapp2.ns2
