webapp2-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp2-vs
  namespace: ns2
spec:
  hosts:
  - webapp2
  exportTo:
  - "*"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: webapp2.ns2
