network-policy-istio-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-ports-network-policy
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system # source namespace
      ports:
        - protocol: TCP
          port: 15021
        - protocol: TCP
          port: 15006
        - protocol: TCP
          port: 15001
        - protocol: TCP
          port: 15000
        - protocol: TCP
          port: 15090
        - protocol: TCP
          port: 15020
        - protocol: TCP
          port: 15053
        - protocol: TCP
          port: 15004      
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system # destination namespace
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 15012
